# raven2

./: .gitignore  .project  CMakeLists.txt  CODE_OF_CONDUCT.md  Makefile  README.md  cmake_install.cmake  mainpage.dox  manifest.xml  package.xml  raven_2.depend  raven_2.layout  workspace.workspace
Doxygen/: Doxyfile  footer.html
Doxygen/specialFiles/: doxygengroups.h  message documentiation
cfg/: MyStuff.cfg  MyStuff.cfgc  Raven2.cfg
cfg/cpp/raven_2/: MyStuffConfig.h
code_style/: .clang-format  README.md  cpplint_raven.py  naming.md
docs/: MyStuffConfig-usage.dox  MyStuffConfig.dox  MyStuffConfig.wikidoc
include/: DOF_type.h  DS0.h  DS1.h  USB_packets.h  itp_teleoperation.h  mainpage.h  mainpage.md
include/raven/: USB_init.h  console_process.h  crtk_io.h  crtk_motion.h  crtk_motion_api.h  crtk_motion_planner.h  crtk_state.h  defines.h  dof.h  fifo.h  fwd_cable_coupling.h  fwd_kinematics.h  get_USB_packet.h  grav_comp.h  hmatrix.h  homing.h  init.h  inv_cable_coupling.h  inv_kinematics.h  local_io.h  log.h  mapping.h  motor.h  network_layer.h  overdrive_detect.h  parallel.h  pid_control.h  put_USB_packet.h  r2_jacobian.h  r2_jacobian_defs.h  r2_kinematics.h  reconfigure.h  rt_process_preempt.h  rt_raven.h  state_estimate.h  state_machine.h  struct.h  t_to_DAC_val.h  tool.h  tools.h  (+4 more)
launch/: raven_2.launch  raven_2_rviz.launch
msg/: raven_automove.msg  raven_jointmove.msg  raven_state.msg  robot_state.msg  robot_status.msg
msg_gen/cpp/include/raven_2/: raven_automove.h  raven_state.h
msg_gen/lisp/: _package.lisp  _package_raven_automove.lisp  _package_raven_state.lisp  raven_2-msg.asd  raven_automove.lisp  raven_state.lisp
params/: r2_gold_only_params.yaml  r2params.yaml  raven_gold_crtk.yaml  raven_green_crtk.yaml
src/raven/: USB_init.cpp  console_process.cpp  crtk_motion.cpp  crtk_motion_api.cpp  crtk_motion_planner.cpp  crtk_state.cpp  dof.cpp  fwd_cable_coupling.cpp  fwd_kinematics.cpp  get_USB_packet.cpp  globals.cpp  grav_comp.cpp  hmatrix.c  hmatrix.cpp  homing.cpp  init.cpp  inv_cable_coupling.cpp  local_io.cpp  log.cpp  mapping.cpp  motor.cpp  network_layer.cpp  overdrive_detect.cpp  parallel.cpp  pid_control.cpp  put_USB_packet.cpp  r2_jacobian.cpp  r2_kinematics.cpp  r2_kinematics.cpp~  reconfigure.cpp  rt_process_preempt.cpp  rt_raven.cpp  state_estimate.cpp  state_machine.cpp  t_to_DAC_val.cpp  tools.cpp  trajectory.cpp  update_atmel_io.cpp  update_device_state.cpp  utils.cpp
src/raven_2/cfg/: MyStuffConfig.py
src/raven_2/msg/: __init__.py  _raven_automove.py  _raven_state.py
support/: README.md  pub_stereo.py
support/stereo_cam/: README.md  example.yaml  pub_stereo.py
