<package format="2">
  <name>raven_2</name>
  <version>0.1.0</version>
  <description>The raven_2 package</description>
  <maintainer email="todo@todo.org">Todo</maintainer>
  <license>LGPL-3</license>

  <url>http://ros.org/wiki/raven_2</url>
  <author></author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf</depend>
  <depend>dynamic_reconfigure</depend>

  <exec_depend>message_runtime</exec_depend>

  <doc_depend>doxygen</doc_depend>
</package>
